--- a/PROD/CONF/BDI/load-spark-bdi.conf
+++ b/PROD/CONF/BDI/load-spark-bdi.conf
@@ -45,13 +45,13 @@ flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
-flux.inline.exec-queries +="alter table cdr.spark_it_bdi drop partition(original_file_date='###SLICE_VALUE###')"
-flux.inline.exec-queries +="alter table cdr.spark_it_bdi_ligne_flotte drop partition(original_file_date='###SLICE_VALUE###')"
-flux.inline.exec-queries +="alter table cdr.spark_it_bdi_pers_morale drop partition(original_file_date='###SLICE_VALUE###')"
-flux.inline.exec-queries +="alter table cdr.spark_it_bdi_full1 drop partition(original_file_date='###SLICE_VALUE###')"
-
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/prequery_spark_it_bdi.hql"
+
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS fn_format_msisdn_to_9digits"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION fn_format_msisdn_to_9digits as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
+
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.tt_gap_bdi_hlr"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_ZSMART_GAP2"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_TMP"
@@ -65,8 +65,7 @@ flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_bdi3"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI3_1"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_PERS_MORALE_TMP"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_LIGNE_FLOTTE2"
-flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_IT_BDI_FULL_2A"
-flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_IT_BDI_FULL_2B"
+flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI3_2"
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_gap_bdi_hlr.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_gap_into_tt_zsmart.hql"
@@ -84,8 +83,8 @@ flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi_ligne_flott
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi3_from_tt_bdi2.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi3_1_from_tt_bdi3.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_it_bdi_pers_morale.hql"
-flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_it_bdi_full_2a.hql"
-flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_it_bdi_full_2b.hql"
-flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_it_bdi.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_again1_into_tt_bdi_flotte2.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi_3_2.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_it_bdi_ligne_flotte.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_it_bdi.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_it_bdi_full1.hql"
