--- a/PROD/CONF/BDI/load-spark-bdi.conf
+++ b/PROD/CONF/BDI/load-spark-bdi.conf
@@ -66,6 +66,7 @@ flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI3_1"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_PERS_MORALE_TMP"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_LIGNE_FLOTTE2"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI3_2"
+flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI3_3"
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_gap_bdi_hlr.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_gap_into_tt_zsmart.hql"
@@ -86,5 +87,6 @@ flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_it_bdi_pers_
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_again1_into_tt_bdi_flotte2.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi_3_2.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_it_bdi_ligne_flotte.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi_3_3.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_it_bdi.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_it_bdi_full1.hql"
