--- a/PROD/CONF/EXPORT/PICO_CREDIT/load-export-pico-credit-month.conf
+++ b/PROD/CONF/EXPORT/PICO_CREDIT/load-export-pico-credit-month.conf
@@ -67,6 +67,6 @@ flux.inline.post-exec-queries += "INSERT INTO MON.EXPORT_HISTORY VALUES ('${hive
 
 flux.hdfs.output-format = "csv"
 flux.hdfs.output-has-header = "true"
-flux.hdfs.output-separator = ";"
+flux.hdfs.output-separator = "|"
 flux.hdfs.output-mode = "overwrite"
 flux.hdfs.output-path = "/PROD/EXPORT/EXPORT_PICO_CREDIT_MONTHLY"
