update conf ceo dashboard

--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-adustment-revenue.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-adustment-revenue.conf
@@ -28,7 +28,7 @@ flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
-flux.slice-has-state-query=false
+flux.slice-has-state-query= = true
 flux.slice-state-query="""
 select  if(count(*)=7,'OK','NOK')
 
@@ -36,7 +36,7 @@ from dim.dt_dates
 where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
     and datecode in (select distinct transaction_date from AGG.SPARK_FT_GLOBAL_ACTIVITY_DAILY_MKT_DG where JOB_NAME = 'COMPUTE_KPI_ADJUSTMENT' and transaction_date between date_sub(current_date, 7) and date_sub(current_date, 1))
 """
-flux.slice-has-filter-query = false
+flux.slice-has-filter-query =  = true
 flux.slice-filter-query = """
 select
     date_format(datecode,'yyyy-MM-dd')
@@ -50,8 +50,8 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = true
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_completude.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY_MKT_V2/prequery_spark_kpi_adustment_revenue.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_completude.hql"
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS GET_NNP_MSISDN_9DIGITS"
