optimisation des scripts de global activity mkt dg

--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-final.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-final.conf
@@ -22,7 +22,7 @@ flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
-flux.slice-has-state-query= = true
+flux.slice-has-state-query= true
 flux.slice-state-query="""
 select  if(count(*)=7,'OK','NOK')
 
@@ -30,7 +30,7 @@ from dim.dt_dates
 where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
     and datecode in (select distinct PROCESSING_DATE from AGG.SPARK_KPIS_DG_FINAL where GRANULARITE_REG = 'ADMINISTRATIVE_REGION' and PROCESSING_DATE between date_sub(current_date, 7) and date_sub(current_date, 1))
 """
-flux.slice-has-filter-query =  = true
+flux.slice-has-filter-query = true
 flux.slice-filter-query = """
 select
     date_format(datecode,'yyyy-MM-dd')
