--- a/PROD/CONF/BDI/load-spark-ft-bdi.conf
+++ b/PROD/CONF/BDI/load-spark-ft-bdi.conf
@@ -46,6 +46,11 @@ flux.has-post-queries = false
 
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_BDI/prequery_spark_ft_bdi.hql"
+
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS fn_format_msisdn_to_9digits"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION fn_format_msisdn_to_9digits as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
+
 flux.inline.exec-queries +="truncate table TMP.TT_FT_BDI"
 flux.inline.exec-queries +="truncate table TMP.TT_FT_BDI_II"
 flux.inline.exec-queries +="truncate table TMP.TT_FT_BDI_III"
