--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-customer-base.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-customer-base.conf
@@ -22,14 +22,14 @@ flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
-flux.slice-has-state-query= true
+flux.slice-has-state-query= false
 flux.slice-state-query="""
 select  if(count(*)=7,'OK','NOK')
 from dim.dt_dates
 where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
     and datecode in (select distinct TRANSACTION_DATE from AGG.SPARK_FT_GLOBAL_ACTIVITY_DAILY_MKT_DG where JOB_NAME = 'COMPUTE_KPI_CUSTOMER_BASE' and TRANSACTION_DATE between date_sub(current_date, 7) and date_sub(current_date, 1))
 """
-flux.slice-has-filter-query = true
+flux.slice-has-filter-query = false
 flux.slice-filter-query = """
 select
     date_format(datecode,'yyyy-MM-dd')
