--- a/PROD/CONF/BDI/load-spark-ft-bdi.conf
+++ b/PROD/CONF/BDI/load-spark-ft-bdi.conf
@@ -44,9 +44,13 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
-flux.inline.exec-queries +="alter table mon.spark_ft_bdi drop partition(event_date='###SLICE_VALUE###')"
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_BDI/prequery_spark_ft_bdi.hql"
+
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS fn_format_msisdn_to_9digits"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION fn_format_msisdn_to_9digits as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
+
 flux.inline.exec-queries +="truncate table TMP.TT_FT_BDI"
 flux.inline.exec-queries +="truncate table TMP.TT_FT_BDI_II"
 flux.inline.exec-queries +="truncate table TMP.TT_FT_BDI_III"
