--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-otarie-data-trafic.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-otarie-data-trafic.conf
@@ -22,7 +22,7 @@ flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
-flux.slice-has-state-query=false
+flux.slice-has-state-query= false
 flux.slice-state-query="""
 select  if(count(*)=7,'OK','NOK')
 
