--- a/PROD/CONF/SQOOP/sqoop-export-ft-a-gprs-location.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-a-gprs-location.conf
@@ -33,7 +33,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT * FROM AGG.SPARK_FT_A_GPRS_LOCATION WHERE SESSION_DATE='###SLICE_VALUE###'"
+flux.sqoop.query = "SELECT *, 'NULL' FROM AGG.SPARK_FT_A_GPRS_LOCATION WHERE SESSION_DATE='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "CTI.SQ_FT_A_GPRS_LOCATION_EXPORT"
 flux.sqoop.export-rdms.dest-table = "MON.FT_A_GPRS_LOCATION"
