--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -1094,3 +1094,54 @@ crontasks +=
       , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
+
+
+  crontasks +=
+  {
+    instanceId = "SQ_EXPORT_SPARK_FT_CREDIT_TRANSFER",
+    cron = "0 40 */1 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-credit-transfer.conf",
+    taskType = "SQOOP",
+    taskQueue = "compute",
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "180 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+    ]
+  }
+
+
+  crontasks +=
+  {
+    instanceId = "SQ_EXPORT_SPARK_FT_A_GPRS_LOCATION",
+    cron = "0 40 */1 * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-ft-a-gprs-location.conf",
+    taskType = "SQOOP",
+    taskQueue = "compute",
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "180 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+    ]
+  }
+
+
+  crontasks +=
+  {
+    instanceId = "SQ_EXPORT_SPARK_FT_GSM_LOCATION_REVENUE_DAILY",
+    cron = "0 40 */1 * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-ft-gsm-location-revenue-daily.conf",
+    taskType = "SQOOP",
+    taskQueue = "compute",
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "180 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+    ]
+  }
