--- a/PROD/CONF/FT_RETAIL_BASE_DETAILLANT/load_spark_ft_retail_base_detaillant.conf
+++ b/PROD/CONF/FT_RETAIL_BASE_DETAILLANT/load_spark_ft_retail_base_detaillant.conf
@@ -16,19 +16,19 @@ flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
 flux.slice-has-state-query=true
 flux.slice-state-query="""
-select  if(count(*)=210,'OK','NOK')
-
+select
+    if(count(*)=30,'OK','NOK')
 from dim.dt_dates
-where datecode between date_sub(current_date, 210) and date_sub(current_date, 1)
-    and datecode in (select distinct refill_date from MON.SPARK_FT_RETAIL_BASE_DETAILLANT where refill_date between date_sub(current_date, 210) and date_sub(current_date, 1))
+where datecode between date_sub(current_date, 30) and date_sub(current_date, 1)
+    and datecode in (select distinct refill_date from MON.SPARK_FT_RETAIL_BASE_DETAILLANT where refill_date between date_sub(current_date, 30) and date_sub(current_date, 1))
 """
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
 select
     date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates
-where datecode between date_sub(current_date, 210) and date_sub(current_date, 1)
-    and datecode in (select distinct refill_date from MON.SPARK_FT_RETAIL_BASE_DETAILLANT where refill_date between date_sub(current_date, 210) and date_sub(current_date, 1))
+where datecode between date_sub(current_date, 30) and date_sub(current_date, 1)
+    and datecode in (select distinct refill_date from MON.SPARK_FT_RETAIL_BASE_DETAILLANT where refill_date between date_sub(current_date, 30) and date_sub(current_date, 1))
 """
 flux.slice-date-format = "yyyy-MM-dd"
 
