--- a/PROD/CONF/EXPORT/CRM/load-export-crm-ouput-abonnement.conf
+++ b/PROD/CONF/EXPORT/CRM/load-export-crm-ouput-abonnement.conf
@@ -5,11 +5,11 @@ flux.output-type = "HDFS"
 
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
-flux.spark.setup-var +=  {"key": "job_instanceid", "value": "LOAD_EXPORT_CBM_OUPUT_ABONNEMENT"}
+flux.spark.setup-var +=  {"key": "job_instanceid", "value": "LOAD_EXPORT_CRM_OUPUT_ABONNEMENT"}
 flux.spark.setup-var +=  {"key": "begin_slice_value", "value": "-3"}
 flux.spark.setup-var +=  {"key": "end_slice_value", "value": "-1"}
 
-flux.name = "LOAD_EXPORT_CBM_OUPUT_ABONNEMENT"
+flux.name = "LOAD_EXPORT_CRM_OUPUT_ABONNEMENT"
 
 flux.has-date-processing = true
 flux.slice-value-type = "MONTHLY"
@@ -66,6 +66,6 @@ flux.exec-queries += "/PROD/SCRIPTS/EXPORT/CRM/FT_CRM_OUTPUT_ABONNEMENT/query_cr
 flux.inline.post-exec-queries += "INSERT INTO MON.EXPORT_HISTORY VALUES ('${hivevar:job_instanceid}', 'OK', CURRENT_TIMESTAMP, '###SLICE_VALUE###')"
 flux.hdfs.output-format = "csv"
 flux.hdfs.output-has-header = "true"
-flux.hdfs.output-separator = ";"
+flux.hdfs.output-separator = "¶"
 flux.hdfs.output-mode = "overwrite"
 flux.hdfs.output-path = "/PROD/EXPORT/CRM/OUTPUT_ABONNEMENT"
