--- a/PROD/CONF/EXPORT/CRM/load-export-crm-ouput-orange-money.conf
+++ b/PROD/CONF/EXPORT/CRM/load-export-crm-ouput-orange-money.conf
@@ -70,6 +70,6 @@ flux.inline.post-exec-queries += "INSERT INTO MON.EXPORT_HISTORY VALUES ('${hive
 
 flux.hdfs.output-format = "csv"
 flux.hdfs.output-has-header = "true"
-flux.hdfs.output-separator = ";"
+flux.hdfs.output-separator = "¶"
 flux.hdfs.output-mode = "overwrite"
 flux.hdfs.output-path = "/PROD/EXPORT/CRM/OUTPUT_ORANGE_MONEY"
