application des updates du ceo dashboard

--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -1704,7 +1704,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_FT_OTARIE_DATA_TRAFFIC_DAY",
-    cron = "0 12 */1 * * ?",
+    cron = "0 0,20,40/20 * * * ?",
     configFile = "/PROD/CONF/OTARIE/FT/load-spark-ft-otarie-data-traffic-day.conf",
     taskType = "BATCH",
     taskQueue = "compute",
