--- a/PROD/CONF/spark-collect-cron-tasks.conf
+++ b/PROD/CONF/spark-collect-cron-tasks.conf
@@ -98,7 +98,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_IT_ZTE_BAL_EXTRACT",
-    cron = "55 20-59/10 * * * ?",
+    cron = "55 0,10,20,30,40,50/10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-bal-extract.conf",
     taskType = "BATCH"
      taskQueue = "collect"
