--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-final.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-final.conf
@@ -46,5 +46,12 @@ flux.has-post-queries = false
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS GET_NNP_MSISDN_9DIGITS"
 flux.inline.exec-queries += "create temporary function GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
-flux.inline.pre-exec-queries+="select if(is_ok=0 and monthly>0 and weekly>0,'OK','NOK') from (select count(*) is_ok from AGG.SPARK_KPIS_DG_FINAL where processing_date='###SLICE_VALUE###'  )a,(select COUNT(*) weekly from AGG.SPARK_KPIS_DG_TMP_SUPP_REG_INCONNUE where processing_date='###SLICE_VALUE###' AND granularite='WEEKLY')b,(select COUNT(*) monthly from AGG.SPARK_KPIS_DG_TMP_SUPP_REG_INCONNUE where processing_date='###SLICE_VALUE###' AND granularite='MONTHLY')c"
+flux.inline.pre-exec-queries+="""
+select if(is_ok=0 and monthly>0 and weekly>0 and nb_dates=6,'OK','NOK')
+from
+(select count(*) is_ok from AGG.SPARK_KPIS_DG_FINAL where processing_date='###SLICE_VALUE###'  )a,
+(select COUNT(*) weekly from AGG.SPARK_KPIS_DG_TMP_SUPP_REG_INCONNUE where processing_date='###SLICE_VALUE###' AND granularite='WEEKLY')b,
+(select COUNT(*) monthly from AGG.SPARK_KPIS_DG_TMP_SUPP_REG_INCONNUE where processing_date='###SLICE_VALUE###' AND granularite='MONTHLY')c,
+(select count(distinct processing_date) nb_dates from  AGG.SPARK_KPIS_DG_TMP_SUPP_REG_INCONNUE where (processing_date in (date_sub('###SLICE_VALUE###',6) , date_sub('###SLICE_VALUE###',14),date_sub('###SLICE_VALUE###',21),date_sub('###SLICE_VALUE###',28)) and  granularite='WEEKLY' ) or (processing_date=add_months('###SLICE_VALUE###',-1) and granularite='MONTHLY') or (processing_date=add_months('###SLICE_VALUE###',-12) and granularite='MONTHLY'))d
+"""
 flux.exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY_MKT_V2/compute_and_insert_agregations_final.hql"
