--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-final.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-final.conf
@@ -47,7 +47,7 @@ flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS GET_NNP_MSISDN_9DIGITS"
 flux.inline.exec-queries += "create temporary function GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
 flux.inline.pre-exec-queries+="""
-select if(is_ok=0 and monthly>0 and weekly>0 and nb_dates=6,'OK','NOK')
+select if(is_ok=0 and monthly>0 and weekly>0 and (case when '###SLICE_VALUE###' >='2020-11-15' then nb_dates else nb_dates+1 end ) >=6,'OK','NOK')
 from
 (select count(*) is_ok from AGG.SPARK_KPIS_DG_FINAL where processing_date='###SLICE_VALUE###'  )a,
 (select COUNT(*) weekly from AGG.SPARK_KPIS_DG_TMP_SUPP_REG_INCONNUE where processing_date='###SLICE_VALUE###' AND granularite='WEEKLY')b,
