Implementation FT_REFILL_LOCATION

--- a/PROD/CONF/DD/load-spark-ft-refill-location.conf
+++ b/PROD/CONF/DD/load-spark-ft-refill-location.conf
@@ -39,12 +39,14 @@ flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
-flux.inline.exec-queries += "TRUNCATE TABLE TMP.TMP_RECEIVED_NOTIFICATION_SMS"
-flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_REFILL_LOCATION_1"
-flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_REFILL_LOCATION_2"
-flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_REFILL_LOCATION_3"
-flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_REFILL_LOCATION_4"
-flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_REFILL_LOCATION_5"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TMP_RECEIVED_NOTIFICATION_SMS11"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_REFILL_LOCATION_11"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_REFILL_LOCATION_21"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_REFILL_LOCATION_31"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_REFILL_LOCATION_41"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_REFILL_LOCATION_51"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_REFILL_LOCATION_61"
+
 flux.exec-queries += "/PROD/SCRIPTS/FT/DD/FT_REFILL_LOCATION/compute_and_insert_into_spark_ft_refill_location1.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/DD/FT_REFILL_LOCATION/compute_and_insert_into_spark_ft_refill_location2.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/DD/FT_REFILL_LOCATION/compute_and_insert_into_spark_ft_refill_location3.hql"
@@ -52,3 +54,4 @@ flux.exec-queries += "/PROD/SCRIPTS/FT/DD/FT_REFILL_LOCATION/compute_and_insert_
 flux.exec-queries += "/PROD/SCRIPTS/FT/DD/FT_REFILL_LOCATION/compute_and_insert_into_spark_ft_refill_location5.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/DD/FT_REFILL_LOCATION/compute_and_insert_into_spark_ft_refill_location6.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/DD/FT_REFILL_LOCATION/compute_and_insert_into_spark_ft_refill_location7.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/DD/FT_REFILL_LOCATION/compute_and_insert_into_spark_ft_refill_location8.hql"
