Implementation SQOOP FT_REFILL_LOCATION

--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -1145,3 +1145,20 @@ crontasks +=
       , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
+
+
+  crontasks +=
+    {
+      instanceId = "SQ_EXPORT_SPARK_FT_REFILL_LOCATION",
+      cron = "0 40 */1 * * ?",
+      configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-refill-location.conf",
+      taskType = "SQOOP",
+      taskQueue = "compute",
+      taskLauncher = ${SQOOP_LAUNCHER}
+      timeout = "180 minutes"
+      extraTaskParams : [
+        {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+        , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+        , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+      ]
+    }
