--- a/PROD/CONF/BDI/load-spark-bdi.conf
+++ b/PROD/CONF/BDI/load-spark-bdi.conf
@@ -5,10 +5,11 @@ flux.setup-conf = []
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
+
 flux.name = "LOAD_SPARK_IT_BDI_TABLE"
 flux.has-date-processing = true
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -30
+flux.slice-begin-value = -7
 flux.slice-end-value = 0
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
@@ -16,18 +17,18 @@ flux.slice-end-value-offset = 0
 flux.slice-has-state-query=true
 flux.slice-state-query="""
 select
-    if(count(*)=31,'OK','NOK')
+    if(count(*)=8,'OK','NOK')
 from dim.dt_dates
-where datecode between date_sub(current_date, 30) and date_sub(current_date, 0)
-    and datecode in (select distinct original_file_date from CDR.SPARK_IT_BDI where original_file_date between date_sub(current_date, 30) and date_sub(current_date, 0))
+where datecode between date_sub(current_date, 7) and date_sub(current_date, 0)
+    and datecode in (select distinct original_file_date from CDR.SPARK_IT_BDI where original_file_date between date_sub(current_date, 7) and date_sub(current_date, 0))
 """
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
 select
     date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates
-where datecode between date_sub(current_date, 30) and date_sub(current_date, 0)
-    and datecode in (select distinct original_file_date from CDR.SPARK_IT_BDI where original_file_date between date_sub(current_date, 30) and date_sub(current_date, 0))
+where datecode between date_sub(current_date, 7) and date_sub(current_date, 0)
+    and datecode in (select distinct original_file_date from CDR.SPARK_IT_BDI where original_file_date between date_sub(current_date, 7) and date_sub(current_date, 0))
 """
 flux.slice-date-format = "yyyy-MM-dd"
 flux.has-pre-queries = true
@@ -54,7 +55,6 @@ flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION fn_format_msisdn_to_9digi
 
 
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_TMP"
-flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_PERS_MORALE"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_TMP1"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_bdi"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_FLOTTE"
@@ -64,6 +64,7 @@ flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_bdi3"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI3_1"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_PERS_MORALE_TMP"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_LIGNE_FLOTTE2"
+flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI2_1AA0"
 
 
 
@@ -72,16 +73,19 @@ flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/merge_spark_it_bdi_crm_b2b_int
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_remove_no_zsmart_to_bdi_tmp.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi_flotte.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi_flotte_1b.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_spark_it_bdi_stk_pers_morale_b2b_into_tt_bdi_pers_morale.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_stk_flotte_into_tt_bdi_flotte.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi_flotte_plus.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi1.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi2_1aa.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/remove_from_tt_bdi_tt_stk_pers_morale_and_stk_flotte.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi_ligne_flotte2.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi3_from_tt_bdi2.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi3_1_from_tt_bdi3.hql"
-flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_it_bdi_pers_morale.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_multisim_into_tt_bdi_ligne_flotte2.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_tt_bdi_ligne_flotte2_multitism_generique.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_it_bdi_pers_morale.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_it_bdi_ligne_flotte.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_it_bdi.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/insert_into_spark_it_bdi_full1.hql"
