--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-refill-location.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-refill-location.conf
@@ -33,9 +33,24 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "select REFILL_DATE, REFILL_TIME, SENDER_MSISDN, RECEIVER_MSISDN, SENDER_CATEGORY
-, REFILL_MEAN, REFILL_TYPE, REFILL_AMOUNT, SITE_NAME_SENDER, SITE_APPRECIATION_SENDER
-SITE_NAME_RECEIVER, SITE_APPRECIATION_RECEIVER, INSERT_DATE FROM MON.SPARK_FT_REFILL_LOCATION WHERE refill_date='###SLICE_VALUE###'"
+flux.sqoop.query = """
+SELECT
+    REFILL_DATE
+    , REFILL_TIME
+    , SENDER_MSISDN
+    , RECEIVER_MSISDN
+    , SENDER_CATEGORY
+    , REFILL_MEAN
+    , REFILL_TYPE
+    , REFILL_AMOUNT
+    , SITE_NAME_SENDER
+    , SITE_APPRECIATION_SENDER
+    , SITE_NAME_RECEIVER
+    , SITE_APPRECIATION_RECEIVER
+    , INSERT_DATE
+FROM MON.SPARK_FT_REFILL_LOCATION
+WHERE refill_date='###SLICE_VALUE###'
+"""
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_REFILL_LOCATION"
 flux.sqoop.export-rdms.dest-table = "MON.FT_REFILL_LOCATION"
