CBM DEBIT  IRIS

--- a/PROD/CONF/RAW_SALES/FT_ROAMING_RETAIL_OUT/load-spark-ft-roaming-retail-out.conf
+++ b/PROD/CONF/RAW_SALES/FT_ROAMING_RETAIL_OUT/load-spark-ft-roaming-retail-out.conf
@@ -47,8 +47,8 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
+flux.inline.exec-queries += "DROP TEMPORARY  FUNCTION  IF EXISTS FN_GET_DESTINATION"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_DESTINATION as 'cm.orange.bigdata.udf.GetNnpMsisdnSimpleDestn'"
-
 flux.pre-exec-queries += "/PROD/SCRIPTS/RAW_SALES/FT_ROAMING_RETAIL_OUT/prequery_spark_ft_roaming_retail_out.hql"
 
 
