Correction du conf de déversement de FT_REFILL

--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-refill.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-refill.conf
@@ -21,11 +21,11 @@ flux.hive.has-pre-queries = true
 
 flux.rdms.pre-exec-queries += """
 SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
-(SELECT COUNT(*) NBR FROM MON.FT_REFILL WHERE refill_date BETWEEN TO_DATE('###SLICE_VALUE### 000000', 'YYYY-MM-DD HH24MISS') AND TO_DATE('###SLICE_VALUE### 235959', 'YYYY-MM-DD HH24MISS'))
+(SELECT COUNT(*) NBR FROM MON.FT_REFILL WHERE REFILL_DATE = TO_DATE('###SLICE_VALUE###', 'YYYY-MM-DD'))
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 1, 'OK', 'NOK') FROM
-(SELECT COUNT(*) NBR FROM  MON.SPARK_FT_REFILL WHERE refill_date='###SLICE_VALUE###') A
+(SELECT COUNT(*) NBR FROM MON.SPARK_FT_REFILL WHERE FILE_DATE='###SLICE_VALUE###') A
 """
 
 flux.sqoop.jdbc-connect-uri = "jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL = TCP)(HOST = 172.21.75.133)(PORT = 20303)))(CONNECT_DATA=(SERVICE_NAME = OCMDWH)))"
@@ -33,7 +33,39 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "select REFILL_ID, REFILL_DATE, REFILL_TIME, RECEIVER_MSISDN, RECEIVER_PROFILE, RECEIVER_IMSI, SENDER_MSISDN, SENDER_PROFILE, REFILL_MEAN, REFILL_TYPE, REFILL_AMOUNT, REFILL_BONUS, TERMINATION_IND, ENTRY_DATE, ORIGINAL_FILE_NAME, INSERT_DATE, REFILL_CODE, REFILL_DESCRIPTION, RECEIVER_OPERATOR_CODE, SENDER_OPERATOR_CODE, SENDER_CATEGORY, RECEIVER_CATEGORY, SENDER_PRE_BAL, SENDER_POST_BAL, RECEIVER_PRE_BAL, RECEIVER_POST_BAL, COMMISSION FROM MON.SPARK_FT_REFILL WHERE refill_date='###SLICE_VALUE###'"
+flux.sqoop.query = """
+select
+    REFILL_ID,
+    REFILL_DATE,
+    REFILL_TIME,
+    RECEIVER_MSISDN,
+    RECEIVER_PROFILE,
+    RECEIVER_IMSI,
+    SENDER_MSISDN,
+    SENDER_PROFILE,
+    REFILL_MEAN,
+    REFILL_TYPE,
+    REFILL_AMOUNT,
+    REFILL_BONUS,
+    TERMINATION_IND,
+    ENTRY_DATE,
+    ORIGINAL_FILE_NAME,
+    INSERT_DATE,
+    REFILL_CODE,
+    REFILL_DESCRIPTION,
+    RECEIVER_OPERATOR_CODE,
+    SENDER_OPERATOR_CODE,
+    SENDER_CATEGORY,
+    RECEIVER_CATEGORY,
+    SENDER_PRE_BAL,
+    SENDER_POST_BAL,
+    RECEIVER_PRE_BAL,
+    RECEIVER_POST_BAL,
+    COMMISSION,
+    FILE_DATE
+FROM MON.SPARK_FT_REFILL
+WHERE FILE_DATE='###SLICE_VALUE###'
+"""
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_REFILL"
 flux.sqoop.export-rdms.dest-table = "MON.FT_REFILL"
