--- a/PROD/CONF/BDI/load-spark-it-bdi2.conf
+++ b/PROD/CONF/BDI/load-spark-it-bdi2.conf
@@ -54,7 +54,7 @@ flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS fn_format_msisdn_
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION fn_format_msisdn_to_9digits as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
 
 
-flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_TMP"
+flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_TMP_1A"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_TMP1_1A"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_bdi_1A"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.TT_BDI_FLOTTE_1A"
