--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -1162,3 +1162,36 @@ crontasks +=
         , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
       ]
     }
+
+
+     crontasks +=
+    {
+      instanceId = "SQ_EXPORT_SPARK_FT_A_IRIS_REVENU_SPLIT",
+      cron = "0 40 */1 * * ?",
+      configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-iris-revenu-split.conf",
+      taskType = "SQOOP",
+      taskQueue = "compute",
+      taskLauncher = ${SQOOP_LAUNCHER}
+      timeout = "180 minutes"
+      extraTaskParams : [
+        {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+        , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+        , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+      ]
+    }
+
+  crontasks +=
+    {
+      instanceId = "SQ_EXPORT_SPARK_FT_STAT_AGENT_CTI",
+      cron = "0 54 */1 * * ?",
+      configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-stat-agent-cti.conf",
+      taskType = "SQOOP",
+      taskQueue = "compute",
+      taskLauncher = ${SQOOP_LAUNCHER}
+      timeout = "180 minutes"
+      extraTaskParams : [
+        {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+        , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+        , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+      ]
+    }
