--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -7800,7 +7800,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_EXPORT_TRANSACTIONS",
-    cron = "0 0 1/5 * * ?",
+    cron = "30 */30 * * * ?",
     configFile = "/PROD/CONF/EXPORT/IRIS/load-export-transactions.conf",
     taskType = "BATCH",
     taskQueue = "compute",
