SPOOL COMMISSIONNING UPDATE

--- a/PROD/CONF/CTI/STAT_AGENT_CTI/load-spark-it-stat-agent-cti.conf
+++ b/PROD/CONF/CTI/STAT_AGENT_CTI/load-spark-it-stat-agent-cti.conf
@@ -32,7 +32,7 @@ flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
-flux.hive.extra-conf += "--hivevar date_offset=3"
+flux.hive.extra-conf += "--hivevar date_offset=2"
 flux.hive.extra-conf += "--hivevar cdr_type=CTI"
 flux.hive.extra-conf += "--hivevar file_date_index=-12"
-flux.hive.extra-conf += "--hivevar tt_table_name= CDR.TT_STAT_AGENT_CTI"
+flux.hive.extra-conf += "--hivevar tt_table_name= CTI.TT_STAT_AGENT_CTI"
