--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -1227,3 +1227,18 @@ crontasks +=
              , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
            ]
           }
+ crontasks +=
+         {
+           instanceId = "SQ_EXPORT_SPARK_IT_STAT_AGENT_CTI",
+           cron = "0 */10 * * * ?",
+           configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-it-stat-agent-cti.conf",
+           taskType = "SQOOP",
+           taskQueue = "compute",
+           taskLauncher = ${SQOOP_LAUNCHER}
+           timeout = "180 minutes"
+           extraTaskParams : [
+             {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+             , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+             , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+           ]
+          }
