Modification du déversement de ft_client_last_site_day

--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-client-last-site-day.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-client-last-site-day.conf
@@ -33,7 +33,20 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT * FROM MON.SPARK_FT_CLIENT_LAST_SITE_DAY WHERE EVENT_DATE='###SLICE_VALUE###'"
+flux.sqoop.query = """
+SELECT
+    msisdn,
+    site_name,
+    townname,
+    administrative_region,
+    commercial_region,
+    last_location_day,
+    operator_code,
+    insert_date,
+    event_date
+FROM MON.SPARK_FT_CLIENT_LAST_SITE_DAY
+WHERE EVENT_DATE='###SLICE_VALUE###'
+"""
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_CLIENT_LAST_SITE_DAY"
 flux.sqoop.export-rdms.dest-table = "MON.FT_CLIENT_LAST_SITE_DAY"
