Correct config sqoop import

--- a/PROD/CONF/SQOOP/sqoop-import-spark-datamart-om-marketing.conf
+++ b/PROD/CONF/SQOOP/sqoop-import-spark-datamart-om-marketing.conf
@@ -39,7 +39,7 @@ flux.rdms.post-exec-queries += ""
 
 flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
 flux.sqoop.extra-params +="-jt local"
-flux.sqoop.extra-params += "--hcatalog-table DATAMART_OM_MARKETING_FOR_IMPORT_TMP"
+flux.sqoop.extra-params += "--create-hcatalog-table --hcatalog-table DATAMART_OM_MARKETING_FOR_IMPORT_TMP"
 flux.sqoop.extra-params += "--hcatalog-database TMP"
 flux.sqoop.extra-params += "--split-by JOUR"
 flux.sqoop.extra-params += "-m 12"
@@ -63,5 +63,5 @@ to_date(jour, 'yyyy-MM-dd') jour
 FROM TMP.DATAMART_OM_MARKETING_FOR_IMPORT_TMP
 """
 flux.hive.post-exec-queries += """
-TRUNCATE TABLE TMP.DATAMART_OM_MARKETING_FOR_IMPORT_TMP
+DROP TABLE TMP.DATAMART_OM_MARKETING_FOR_IMPORT_TMP
 """
