Modification FT_B2B ; ajout FT_B2B Réduit; Ajout FT_ZSMART_CONF; Ajout FT_A_SUBS_SPHERE_TRAFFIC_DAY; Modification sqoop export BDI vers sortware factory

--- a/PROD/CONF/BDI/load-spark-ft-b2b-re.conf
+++ b/PROD/CONF/BDI/load-spark-ft-b2b-re.conf
@@ -54,10 +54,20 @@ flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION fn_format_msisdn_to_9digi
 flux.inline.exec-queries +="truncate table TMP.tt_flotte1_re"
 flux.inline.exec-queries +="truncate table TMP.tt_flotte2_re"
 flux.inline.exec-queries +="truncate table TMP.tt_flotte3_re"
-flux.inline.exec-queries +="truncate table TMP.tt_flotte4_re"
 flux.inline.exec-queries +="truncate table TMP.tt_flotte01_re"
 flux.inline.exec-queries +="truncate table TMP.tt_flotte02_re"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte02_generique"
 flux.inline.exec-queries +="truncate table TMP.tt_pm01_re"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte4_ns_RE"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte4_RCCM_RE"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte4_PIECE_REP_RE"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte4_ADRES_STRUCT_RE"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte4_re"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte5_RE"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte6_re"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte7_re"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte8_re"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte9_re"
 
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
@@ -69,9 +79,19 @@ flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_flotte01_re.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_flotte02_re.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_flotte02_generique.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_pm01_re.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_flotte1_re.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_flotte2_re.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_flotte3_re.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_flotte4_ns_re.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_flotte4_rccm_re.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_flotte4_piece_rep_re.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_flotte4_adres_struct_re.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_flotte4_re.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_flotte5_re.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_flotte6_re.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_flotte7_re.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_flotte8_re.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_flotte9_re.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_spark_ft_bdi_b2b_re.hql"
