--- a/PROD/CONF/BDI/load-spark-ft-b2b.conf
+++ b/PROD/CONF/BDI/load-spark-ft-b2b.conf
@@ -54,24 +54,44 @@ flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION fn_format_msisdn_to_9digi
 flux.inline.exec-queries +="truncate table TMP.tt_flotte1"
 flux.inline.exec-queries +="truncate table TMP.tt_flotte2"
 flux.inline.exec-queries +="truncate table TMP.tt_flotte3"
-flux.inline.exec-queries +="truncate table TMP.tt_flotte4"
 flux.inline.exec-queries +="truncate table TMP.tt_flotte01"
 flux.inline.exec-queries +="truncate table TMP.tt_flotte02"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte02_generique1"
 flux.inline.exec-queries +="truncate table TMP.tt_pm01"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte4_ns"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte4_RCCM"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte4_PIECE_REP"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte4_ADRES_STRUCT"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte4"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte5"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte6"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte7"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte8"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte9"
 
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
-flux.inline.exec-queries += "SET hive.exec.reducers.max=16"
+flux.inline.exec-qCueries += "SET hive.exec.reducers.max=16"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte01.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte02.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte02_generique1.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_pm01.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte1.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte2.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte3.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte4_ns.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte4_rccm.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte4_piece_rep.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte4_adres_struct.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte4.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte5.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte6.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte7.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte8.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte9.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_spark_ft_bdi_b2b.hql"
