--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-bdi.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-bdi.conf
@@ -19,9 +19,10 @@ flux.rdms.has-pre-queries = true
 
 flux.hive.has-pre-queries = true
 
+flux.rdms.pre-exec-queries += """truncate table BDI_TEST.TT_BDI_PP"""
 flux.rdms.pre-exec-queries += """
 SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
-(SELECT COUNT(*) NBR FROM BDI_TEST.FT_BDI_PP WHERE event_date = to_date('###SLICE_VALUE###','yyyy-mm-dd'))
+(SELECT COUNT(*) NBR FROM BDI_TEST.FT_BDI_SQ_PP WHERE event_date = to_date('###SLICE_VALUE###','yyyy-mm-dd'))
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 0, 'OK', 'NOK') FROM
@@ -36,9 +37,8 @@ flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 flux.sqoop.query = "SELECT * FROM MON.SPARK_FT_BDI_1A WHERE EVENT_DATE='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "BDI_TEST.TT_BDI_PP"
-flux.sqoop.export-rdms.dest-table = "BDI_TEST.FT_BDI_PP"
+flux.sqoop.export-rdms.dest-table = "BDI_TEST.FT_BDI_SQ_PP"
 flux.sqoop.export-hive.staging-table = "TT_FT_BDI_PP"
 flux.sqoop.export-hive.staging-table-database = "TMP"
 
 flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
-flux.sqoop.extra-params +="-jt local"
