Modification FT_BDI_B2B; spark-compute-cron-tasks.conf

--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -4779,7 +4779,7 @@ crontasks +=
       , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
       , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
       , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--conf spark.ui.port=50822"}
+      , {"param" : "--conf spark.ui.port=50758"}
       , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
@@ -5673,30 +5673,6 @@ crontasks +=
       , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
       , {"param" : "--conf spark.network.timeout=360s"}
       , {"param" : "--conf spark.ui.port=50917"}
-      , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
-    ]
-  }
-
-crontasks +=
-  {
-    instanceId = "LOAD_SPARK_SPOOL_SUSPENSIONS_TELCO",
-    cron = "0 48 */1 * * ?",
-    configFile = "/PROD/CONF/SPOOL/load-spark-spool-suspensions-telco.conf",
-    taskType = "BATCH",
-    taskQueue = "compute",
-    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
-      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
-      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
-      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
-      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
-      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
-      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
-      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
-      , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--conf spark.ui.port=50918"}
       , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
@@ -8998,29 +8974,29 @@ crontasks +=
     }
 
 
-crontasks +=
-{
-  instanceId = "LOAD_SPARK_FT_BDI_B2B",
-  cron = "0 */10 * * * ?",
-  configFile = "/PROD/CONF/BDI/load-spark-ft-b2b.conf",
-  taskType = "BATCH",
-  taskQueue = "compute",
-  taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
-  timeout = "300 minutes"
-  extraTaskParams : [
-    {"param" : "--master yarn --executor-cores 4 --num-executors 6 --driver-memory 6G --executor-memory 8G"}
-    , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
-    , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
-    , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
-    , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
-    , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
-    , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
-    , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
-    , {"param" : "--conf spark.network.timeout=360s"}
-    , {"param" : "--conf spark.ui.port=50746"}
-    , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
-  ]
-}
+//crontasks +=
+//{
+//  instanceId = "LOAD_SPARK_FT_BDI_B2B",
+//  cron = "0 */10 * * * ?",
+//  configFile = "/PROD/CONF/BDI/load-spark-ft-b2b.conf",
+//  taskType = "BATCH",
+//  taskQueue = "compute",
+//  taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+//  timeout = "300 minutes"
+//  extraTaskParams : [
+//    {"param" : "--master yarn --executor-cores 4 --num-executors 6 --driver-memory 6G --executor-memory 8G"}
+//    , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+//    , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+//    , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+//    , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+//    , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+//    , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+//    , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+//    , {"param" : "--conf spark.network.timeout=360s"}
+//    , {"param" : "--conf spark.ui.port=50746"}
+//    , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+//  ]
+//}
 
 crontasks +=
 {
@@ -9070,54 +9046,54 @@ crontasks +=
   ]
 }
 
-crontasks +=
-{
-  instanceId = "LOAD_SPARK_FT_BDI_B2B_RE",
-  cron = "0 */10 * * * ?",
-  configFile = "/PROD/CONF/BDI/load-spark-ft-b2b-re.conf",
-  taskType = "BATCH",
-  taskQueue = "compute",
-  taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
-  timeout = "300 minutes"
-  extraTaskParams : [
-    {"param" : "--master yarn --executor-cores 4 --num-executors 6 --driver-memory 6G --executor-memory 8G"}
-    , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
-    , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
-    , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
-    , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
-    , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
-    , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
-    , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
-    , {"param" : "--conf spark.network.timeout=360s"}
-    , {"param" : "--conf spark.ui.port=50753"}
-    , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
-  ]
-}
+//crontasks +=
+//{
+//  instanceId = "LOAD_SPARK_FT_BDI_B2B_RE",
+//  cron = "0 */10 * * * ?",
+//  configFile = "/PROD/CONF/BDI/load-spark-ft-b2b-re.conf",
+//  taskType = "BATCH",
+//  taskQueue = "compute",
+//  taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+//  timeout = "300 minutes"
+//  extraTaskParams : [
+//    {"param" : "--master yarn --executor-cores 4 --num-executors 6 --driver-memory 6G --executor-memory 8G"}
+//    , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+//    , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+//    , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+//    , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+//    , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+//    , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+//    , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+//    , {"param" : "--conf spark.network.timeout=360s"}
+//    , {"param" : "--conf spark.ui.port=50753"}
+//    , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+//  ]
+//}
 
 
-crontasks +=
-{
-  instanceId = "LOAD_SPARK_FT_ZSMART_CONF",
-  cron = "0 */10 * * * ?",
-  configFile = "/PROD/CONF/BDI/load-spark-ft-zsmart-conf.conf",
-  taskType = "BATCH",
-  taskQueue = "compute",
-  taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
-  timeout = "300 minutes"
-  extraTaskParams : [
-    {"param" : "--master yarn --executor-cores 4 --num-executors 6 --driver-memory 6G --executor-memory 8G"}
-    , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
-    , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
-    , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
-    , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
-    , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
-    , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
-    , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
-    , {"param" : "--conf spark.network.timeout=360s"}
-    , {"param" : "--conf spark.ui.port=50756"}
-    , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
-  ]
-}
+//crontasks +=
+//{
+//  instanceId = "LOAD_SPARK_FT_ZSMART_CONF",
+//  cron = "0 */10 * * * ?",
+//  configFile = "/PROD/CONF/BDI/load-spark-ft-zsmart-conf.conf",
+//  taskType = "BATCH",
+//  taskQueue = "compute",
+//  taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+//  timeout = "300 minutes"
+//  extraTaskParams : [
+//    {"param" : "--master yarn --executor-cores 4 --num-executors 6 --driver-memory 6G --executor-memory 8G"}
+//    , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+//    , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+//    , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+//    , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+//    , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+//    , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+//    , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+//    , {"param" : "--conf spark.network.timeout=360s"}
+//    , {"param" : "--conf spark.ui.port=50756"}
+//    , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+//  ]
+//}
 
 
 crontasks +=
